--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
     <link rel="stylesheet" href="css/all.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleo.css">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
 
     <div id="servicios" class="servicio-estudio container">
         <div class="servicio">
-            <h2>Produccion musical</h2>
+            <h2>Produccion</h2>
             <figure class="servicio-foto">
                 <img src="img/prod.jpg">
             </figure>
@@ -201,18 +201,7 @@
                 <p>Sennheiser MD421</p>
             </figcaption>
         </figure>
-        <figure class="equipos-foto">
-            <img src="img/equipos/re20.jpg">
-            <figcaption>
-                <p>Electro Voice RE20</p>
-            </figcaption>
-        </figure>
-        <figure class="equipos-foto">
-            <img src="img/equipos/api.jpg">
-            <figcaption>
-                <p>Ecualizador API</p>
-            </figcaption>
-        </figure>
+
     </main>
 
     <!-- GALERIA  -->
@@ -270,9 +259,7 @@
         <figure class="galeria-foto">
             <a href="img/galeria/piano.jpg" target="blank"><img src="img/galeria/piano.jpg" style="width: 240px"></a>
         </figure>
-        <figure class="galeria-foto">
-            <a href="img/galeria/circo2.jpg" target="blank"><img src="img/galeria/circo2.jpg" style="width: 240px"></a>
-        </figure>
+
     </div>
 
     <!-- CONTACTO  -->
@@ -321,6 +308,7 @@
 			</a>
 		</nav>
     </footer>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
