correcciones con gisella

--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
                     </ul>
                 </nav>
             </div>
+            <img src="img/menu/bars-solid.svg" alt="menu"  class="menu-hamburguesa">
         </div>
     </header>
 
     <!-- MENU -->
     <div class="container menubox">
+
         <nav class="menu">
-            <ul>
+            <ul class="menu-hide">
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#equipos">Equipos</a></li>
                 <li><a href="#galeria">Galeria</a></li>
@@ -58,9 +60,9 @@
 
     <!-- ESTUDIO  -->
 
-    <div class="container contents">
+    <div class="container contents" id="proParch">
         <div class="hero-text">
-            <img class="yo-image" src="img/yo.jpg">
+            <img class="yo-image" src="img/yo.jpg" alt="foto">
             <div class="hero-text-2">
 
                 <p>Junto a mi equipo nos dedicamos hace mas de 10 años
@@ -117,7 +119,7 @@
                 mas los Genelec 1031A.
             </p>
         </div>
-        <div class="servicio">
+        <div class="servicio" id="production-parch">
             <h2>Masterizacion</h2>
             <figure class="servicio-foto">
                 <img src="img/master.jpg">
@@ -268,18 +270,18 @@
         <h2>Contacto</h2>
         <div class="div-footer container">
             <div class="contenido-footer">
-                <div class="contenido2-footer">
+               
                     <div class="mapa">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.953224380749!2d-58.44712570000001!3d-34.6053443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0e12fa167d%3A0x90238645ea822171!2sCnel.%20Apolinario%20Figueroa%20500%2C%20C1414EDJ%20CABA!5e0!3m2!1ses-419!2sar!4v1604671608406!5m2!1ses-419!2sar"
-                            width="630" height="510" frameborder="0" style="border:0;" allowfullscreen=""
+                            width="500" height="350" frameborder="0" style="border:0;" allowfullscreen=""
                             aria-hidden="false" tabindex="0">
                         </iframe>
                     </div>
                     <div class="contacto2">
                         <p>Coronel Apolinario Figueroa 550, Villa Crespo, (CP 1405), CABA</p>
                     </div>
-                </div>
+                
             </div>
             <div class="formu">
                 <form action="envia.php" method="post" class="form-consulta">
@@ -302,13 +304,8 @@
                 </form>
             </div>
         </div>
-		<nav>
-			<a href="https://www.marcelogrion.com/" class="by" target="_blank">
-				<h3>by marcelogrion.com</h3>
-			</a>
-		</nav>
     </footer>
-    <script src="javascript.js"></script>
+    <script src="script/javascript.js"></script>
 </body>
 
 </html>
